update submit button

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                         <label for="field3"><span>Message <span class="required">*</span></span></label>
                         <textarea name="field3" class="textarea-field" id="formMsg"></textarea>
 
-                        <input type="button" value="Submit" onclick="onFormSubmit()" />
+                        <br/>
+                        <input type="button" value="Submit" onclick="onFormSubmit()" id="submit_btn"/>
                     </form>
                     <div id="wish_list">
                         Mary <br /> Happy Wedding!!! <br />
